# contextBuilder

./: .gitignore  README.md  팀원_피쳐_설명서.md  히스토리.md
local-context-builder/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
local-context-builder/app/: __init__.py  celery_app.py  config.py  db.py  db_readonly.py  main.py
local-context-builder/data/: category_mapping_seed.json  persona_types.json  region_master_suwon.csv
local-context-builder/docs/: api_reference.md
local-context-builder/migrations/: README  env.py
local-context-builder/scripts/: load_category_mapping.py  load_region_master.py
local-context-builder/tests/: conftest.py  test_admin_api.py  test_category_mapper.py  test_grid_strategy.py  test_integration_pipeline.py  test_kakao_client.py  test_normalize.py  test_publisher.py  test_region_features.py
spot-simulator/: README.md  main.py  pyproject.toml
spot-simulator/analysis/: run_validate.py  validate.py  visualize.py
spot-simulator/config/: persona_templates.yaml  simulation_config.yaml  skills_catalog.yaml
spot-simulator/data/: __init__.py  adapters.py  agent_factory.py  loader.py  persona_region_affinity.json  region_features.json
spot-simulator/docs/: api_reference.md
spot-simulator/engine/: __init__.py  _math.py  _peer_math.py  decay.py  decision.py  executors.py  fee.py  lifecycle.py  negotiation.py  peer_decision.py  relationships.py  request_lifecycle.py  runner.py  settlement.py  time_availability.py  time_utils.py  wallet_tracker.py
spot-simulator/models/: __init__.py  agent.py  event.py  settlement.py  skills.py  spot.py
spot-simulator/tests/: conftest.py  test_decision.py  test_lifecycle.py  test_models.py  test_peer_request_sampling.py  test_settlement.py
synthetic-content-pipeline/: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
synthetic-content-pipeline/docs/: api_reference.md
synthetic-content-pipeline/migrations/: env.py
synthetic-content-pipeline/scripts/: _scp_03_feed_check.py  _scp_03_sample_dump.py  batch_publish_mvp_500.py  batch_publish_peer_500.py  build_fee_reference.py  build_peer_goldens.py  build_plan_library.py  lint_no_api.py  measure_success_metrics.py  phase4_scenario.py  phase_peer_live_samples.py  qa_boundary_audit.py  qa_boundary_audit_phase2.py
synthetic-content-pipeline/tests/: __init__.py  conftest.py  test_codex_bridge_phase2_smoke_live.py  test_codex_bridge_smoke_live.py  test_content_spec_builder.py  test_critic_unit.py  test_cross_reference.py  test_diversity_unit.py  test_end_to_end_phase1.py  test_loop_stub.py  (+10 more)
(+294 files in other folders)
