[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-context-builder"
version = "0.1.0"
description = "Batch service that builds spot context datasets from Kakao Local and real-service activity data."
requires-python = ">=3.12"
readme = "README.md"
authors = [
  { name = "spotContext team" },
]

dependencies = [
  # Web / async
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  # Task queue
  "celery>=5.4",
  "redis>=5.0",
  # DB / ORM
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  # Settings
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  # Data
  "pandas>=2.2",
  "numpy>=1.26",
  # Fuzzy / string similarity (place dedup)
  "rapidfuzz>=3.9",
  "python-Levenshtein>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "migrations*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
