[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spot-simulator"
version = "0.1.0"
description = "Agent-based simulation runtime for Spot (Phase 1/2/3)."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["models", "engine", "analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
